refactor(#97): add docker compose with swagger, refine openapi yam files, add custom http error responses.
