# docs/api/openapi/bundled.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.4
 info:
   version: 1.0.0
-  title: Admin API
-  description: 'The admin-only portion of the API, which has its own separate OpenAPI spec'
+  title: Overlay HTTP API
+  description: The overlay server API
 servers:
   - url: 'http://localhost:3000'
     description: 'Optional server description, e.g. Main (production) server'
@@ -17,9 +17,12 @@ paths:
       tags:
         - admin
       operationId: AdvertisementsSync
+      security:
+        - bearerAuth: []
       responses:
         '200':
-          description: Success
+          description: |
+            Advertisement sync request successfully delegated to overlay engine.
           content:
             application/json:
               schema:
@@ -29,6 +32,8 @@ paths:
                     type: string
                 required:
                   - Message
+        '500':
+          $ref: '#/paths/~1api~1v1~1submit/post/responses/500'
   /api/v1/submit:
     post:
       tags:
@@ -47,18 +52,20 @@ paths:
       requestBody:
         required: true
         content:
-          application/json:
+          application/octet-stream:
             schema:
               type: object
               properties:
                 Transaction:
                   type: string
-                  format: byte
+                  format: binary
+                  description: 'Serialized transaction data (e.g., a binary format such as Protobuf or other)'
               required:
                 - Transaction
       responses:
         '200':
-          description: Success
+          description: |
+            Overlay engine successfully processed the submitted transaction octet-stream with the specified topic headers.
           content:
             application/json:
               schema:
@@ -95,3 +102,43 @@ paths:
                         - AncillaryTxIDs
                 required:
                   - STEAK
+        '400':
+          description: |
+            The server cannot process the request due to malformed syntax or invalid input. 
+            This error is typically caused by client-side issues, such as missing required parameters, 
+            invalid data formats, or incorrect request structures.
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - message
+                properties:
+                  message:
+                    type: string
+                    description: Human-readable error message
+                  details:
+                    type: object
+                    description: Optional additional error details
+        '409':
+          description: |
+            The server did not receive a complete request within the time it was prepared to wait. 
+            This error can occur if the client’s request takes too long to process or there is network latency.
+          content:
+            application/json:
+              schema:
+                $ref: '#/paths/~1api~1v1~1submit/post/responses/400/content/application~1json/schema'
+        '500':
+          description: |
+            An unexpected condition was encountered on the server, causing the request to fail.
+            This error is typically caused by internal issues such as server misconfigurations, 
+            database failures, or unhandled exceptions.
+          content:
+            application/json:
+              schema:
+                $ref: '#/paths/~1api~1v1~1submit/post/responses/400/content/application~1json/schema'
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
